play/customized-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: customized-istio-ingressgateway
  namespace: istio-system
  labels:
    app: customized-istio-ingressgateway
    istio: customized-istio-ingressgateway
spec:
  ports:
    - name: status-port
      port: 15021
      protocol: TCP
      targetPort: 15021
    - name: http2
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
    - name: tcp
      port: 31400
      protocol: TCP
      targetPort: 31400
    - name: tls
      port: 15443
      protocol: TCP
      targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  type: LoadBalancer
